--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "npx": "^10.2.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
-    "react-scripts": "0.9.5"
+    "react-scripts": "^0.9.5"
   },
   "devDependencies": {},
   "scripts": {
